static/css/style.css
:root {
    --pl-svg: url('../img/Flag_of_Poland.svg'); /* Replace with your Polish flag image */
    --uk-svg: url('../img/Flag_of_the_United_Kingdom.svg'); /* Replace with your UK flag image */
    --primary-color: #007f4e;
    --primary-color-theme-slider: #000000;
    --secondary-color: #72b043;
    --secondary-color-theme-slider: #808080;
    --thrird-color: #000;
    --text-color: #000;
    --hover-color: #ed008c;
}

:root[data-theme="dark"] {
    --primary-color: #000000;
    --primary-color-theme-slider: #007f4e;
    --secondary-color: #404040;
    --secondary-color-theme-slider: #72b043;
    --thrird-color: #818181;
    --text-color: #ffffff;
    --hover-color: #ed008c;
}

@keyframes activeGradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 0%;
  }
  100% {
    background-position: 0% 50%;
  }
}

html {
    font-family: 'Courier New', Courier, monospace;
}

a, h1, h2, p {
    color: var(--text-color);
    font-size: 1.5rem;
}

a:hover {
    color: var(--hover-color);
    font-weight: bold;
    
}

br {
    line-height: 1.5rem;
}

line {
  color: var(--text-color) 
}

body {
  height: 98vh;
  animation: activeGradient 5s infinite alternate;
  background: radial-gradient(circle, var(--primary-color),  var(--secondary-color));
  background-size: 400% 400%;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-left: 1rem;
    padding-right: 1rem;
    
}

header h1 {
    margin-top: 1.5rem;
    color: var(--text-color);
}

main {
    padding: 2rem;
    text-align: center;
    justify-content: center;
}

main a {
  text-decoration: none;
}

.main-page-links {
    margin-top: 4rem;
    display: grid;
    justify-items: stretch;
    justify-content: space-evenly;
}

.switch {
  position: relative;
  display: inline-block;
  width: 4rem;
  height: 2rem;
}

.switch input { 
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  -webkit-transition: .4s;
  transition: .4s;
    border: solid var(--thrird-color) 0.05rem;
}

.lang-switch .switch .slider {
  background-image: var(--uk-svg);
  background-position: center;
  background-size: auto 2rem;
}

.theme-switch .switch .slider {
  background-image: radial-gradient(circle, var(--primary-color), var(--secondary-color));
  background-position: center;
  background-size: auto 2rem;
}

.slider:before {
  position: absolute;
  content: "";
  height: 1.5rem;
  width: 1.5rem;
  top: 0.125rem;
  left: 0.1rem;
  -webkit-transition: 0.5s;
  transition: 0.5s;
  border: solid var(--thrird-color) 0.1rem;
}

.lang-switch .switch .slider::before {
  background-image: var(--pl-svg);
  background-position: center;
  background-size: auto 2rem;
}

.theme-switch .switch .slider::before {
  background-image: radial-gradient(circle, var(--primary-color-theme-slider), var(--secondary-color-theme-slider));
  background-position: center;
  background-size: auto 2rem;
}

input:checked + .slider {
  transition: 0.5s;
}

.lang-switch .switch input:checked + .slider {
  background-image: var(--pl-svg);
  background-position: center;
  background-size: auto 4rem;
}

input:checked + .slider:before {
  --slider-transform: 2rem;
  -webkit-transform: translateX(var(--slider-transform));
  -ms-transform: translateX(var(--slider-transform));
  transform: translateX(var(--slider-transform));
}

.lang-switch .switch input:checked + .slider:before {
  background-image: var(--uk-svg);
  background-position: center;
  background-size: auto 1.75rem;
}

/* Rounded sliders */
.slider.round {
  border-radius: 1rem;
}

.slider.round:before {
  border-radius: 50%;
}

